# aws-sam-library-api

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  pyproject.toml  sam-template.yaml
events/: delete_book.json  get_book.json  get_book_no_parameters.json  patch_book.json  post_book.json  post_library.json  update_book.json
